[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "1.8.0"
counter = "0.5.7"
indoc = "2"
itertools = "0.12.0"
num = "0.4.1"
roots = "0.0.8"

[dev-dependencies]
test-case = "3.3"
microbench = "0.5"
